improve the efficiency of checking whether a tobject is blank or not